JDK-8360405 : [PPC64] some environments don't support mfdscr instruction
  • Type: Bug
  • Component: hotspot
  • Sub-Component: runtime
  • Affected Version: 25,26
  • Priority: P3
  • Status: Resolved
  • Resolution: Fixed
  • CPU: ppc
  • Submitted: 2025-06-24
  • Updated: 2025-07-11
  • Resolved: 2025-06-25
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 25 JDK 26
25Fixed 26 b04Fixed
Related Reports
Causes :  
Description
A user reported running into SIGILL on ppc64le with Java binary with cross-compilation on Ubuntu-24.04 and java -version with QEMU.
See PR comment for details: https://github.com/openjdk/jdk/pull/20262#issuecomment-2999872960
Comments
A pull request was submitted for review. Branch: jdk25 URL: https://git.openjdk.org/jdk/pull/25972 Date: 2025-06-25 09:08:38 +0000
25-06-2025

Changeset: f71d64fb Branch: master Author: Martin Doerr <mdoerr@openjdk.org> Date: 2025-06-25 08:59:46 +0000 URL: https://git.openjdk.org/jdk/commit/f71d64fbeb0c196fd825241ff86d3a103d05a842
25-06-2025

A pull request was submitted for review. Branch: master URL: https://git.openjdk.org/jdk/pull/25953 Date: 2025-06-24 15:19:50 +0000
24-06-2025