8360405: [PPC64] some environments don't support mfdscr instruction

Reviewed-by: haosun, rrich
Backport-of: f71d64fbeb0c196fd825241ff86d3a103d05a842